--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
             aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header" style="background-color: #e9ffff;">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel" style="color:#73d0e1 ;">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel" style="color:#ff4c6796 ;">
                 Favourites
               </h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
